// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> rendering should render sticky msg and close it on clicking close-btn 1`] = `
<div>
  <div
    class="header-container header-desktop"
    data-testid="header"
  >
    <div
      class="header-row-1"
    >
      <div
        class="header-row-1-inner"
      >
        <div
          class="header-left"
        >
          <div
            class="header-logo-div"
          >
            <a
              href="/default"
            >
              <img
                alt="openwisp"
                class="header-logo-image header-desktop-logo-image"
                src="/assets/default//assets/default/openwisp-logo-black.svg"
              />
            </a>
          </div>
        </div>
        <div
          class="header-right"
          data-testid="desktop-language-selector"
        >
          <button
            class="active header-language-btn header-desktop-language-btn header-language-btn-en"
            type="button"
          >
            english
          </button>
          <button
            class="header-language-btn header-desktop-language-btn header-language-btn-it"
            type="button"
          >
            italian
          </button>
        </div>
      </div>
    </div>
    <div
      class="header-row-2"
    >
      <div
        class="header-row-2-inner"
        data-testid="desktop-navigation"
      >
        <a
          class="header-link header-desktop-link
                    header-link-1 button"
          href="link-1/"
          rel="noreferrer noopener"
          target="_blank"
        >
          link-1
        </a>
        <a
          class="header-link header-desktop-link
                    header-link-2 button"
          href="link-2/"
          rel="noreferrer noopener"
          target="_blank"
        >
          link-2
        </a>
      </div>
    </div>
  </div>
  <div
    class="header-mobile "
    data-testid="header"
  >
    <div
      class="header-row-1"
    >
      <div
        class="header-row-1-inner"
      >
        <div
          class="header-left"
        >
          <div
            class="header-logo-div"
          >
            <a
              href="/default"
            >
              <img
                alt="openwisp"
                class="header-logo-image header-mobile-logo-image"
                src="/assets/default//assets/default/openwisp-logo-black.svg"
              />
            </a>
          </div>
        </div>
        <div
          class="header-right"
        >
          <div
            aria-label="Menu Button"
            class="header-hamburger"
            role="button"
            tabindex="0"
          >
            <div
              class=""
            />
            <div
              class=""
            />
            <div
              class=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="display-none header-mobile-menu"
      data-testid="mobile-menu"
    >
      <a
        class="header-link mobile-link
                      header-link-1 button"
        href="link-1/"
        rel="noreferrer noopener"
        target="_blank"
      >
        link-1
      </a>
      <a
        class="header-link mobile-link
                      header-link-2 button"
        href="link-2/"
        rel="noreferrer noopener"
        target="_blank"
      >
        link-2
      </a>
      <div
        class="mobile-languages-row"
      >
        <button
          class="active header-language-btn header-mobile-language-btn header-language-btn-en"
          type="button"
        >
          english
        </button>
        <button
          class="header-language-btn header-mobile-language-btn header-language-btn-it"
          type="button"
        >
          italian
        </button>
      </div>
    </div>
  </div>
  <div
    class="sticky-container"
    role="banner"
  >
    <div
      class="inner"
    >
      <div
        class="sticky-msg"
      >
        <p>
          announcement
        </p>
      </div>
      <button
        class="close-sticky-btn"
        type="button"
      >
        ✖
      </button>
    </div>
  </div>
</div>
`;

exports[`<Header /> rendering should render with links 1`] = `
<div>
  <div
    class="header-container header-desktop"
    data-testid="header"
  >
    <div
      class="header-row-1"
    >
      <div
        class="header-row-1-inner"
      >
        <div
          class="header-left"
        >
          <div
            class="header-logo-div"
          >
            <a
              href="/default"
            >
              <img
                alt="openwisp"
                class="header-logo-image header-desktop-logo-image"
                src="/assets/default//assets/default/openwisp-logo-black.svg"
              />
            </a>
          </div>
        </div>
        <div
          class="header-right"
          data-testid="desktop-language-selector"
        >
          <button
            class="active header-language-btn header-desktop-language-btn header-language-btn-en"
            type="button"
          >
            english
          </button>
          <button
            class="header-language-btn header-desktop-language-btn header-language-btn-it"
            type="button"
          >
            italian
          </button>
        </div>
      </div>
    </div>
    <div
      class="header-row-2"
    >
      <div
        class="header-row-2-inner"
        data-testid="desktop-navigation"
      >
        <a
          class="header-link header-desktop-link
                    header-link-1 button"
          href="link-1/"
          rel="noreferrer noopener"
          target="_blank"
        >
          link-1
        </a>
        <a
          class="header-link header-desktop-link
                    header-link-2 button"
          href="link-2/"
          rel="noreferrer noopener"
          target="_blank"
        >
          link-2
        </a>
      </div>
    </div>
  </div>
  <div
    class="header-mobile "
    data-testid="header"
  >
    <div
      class="header-row-1"
    >
      <div
        class="header-row-1-inner"
      >
        <div
          class="header-left"
        >
          <div
            class="header-logo-div"
          >
            <a
              href="/default"
            >
              <img
                alt="openwisp"
                class="header-logo-image header-mobile-logo-image"
                src="/assets/default//assets/default/openwisp-logo-black.svg"
              />
            </a>
          </div>
        </div>
        <div
          class="header-right"
        >
          <div
            aria-label="Menu Button"
            class="header-hamburger"
            role="button"
            tabindex="0"
          >
            <div
              class=""
            />
            <div
              class=""
            />
            <div
              class=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="display-none header-mobile-menu"
      data-testid="mobile-menu"
    >
      <a
        class="header-link mobile-link
                      header-link-1 button"
        href="link-1/"
        rel="noreferrer noopener"
        target="_blank"
      >
        link-1
      </a>
      <a
        class="header-link mobile-link
                      header-link-2 button"
        href="link-2/"
        rel="noreferrer noopener"
        target="_blank"
      >
        link-2
      </a>
      <div
        class="mobile-languages-row"
      >
        <button
          class="active header-language-btn header-mobile-language-btn header-language-btn-en"
          type="button"
        >
          english
        </button>
        <button
          class="header-language-btn header-mobile-language-btn header-language-btn-it"
          type="button"
        >
          italian
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Header /> rendering should render without links 1`] = `
<div>
  <div
    class="header-container header-desktop"
    data-testid="header"
  >
    <div
      class="header-row-1"
    >
      <div
        class="header-row-1-inner"
      >
        <div
          class="header-left"
        >
          <div
            class="header-logo-div"
          >
            <a
              href="/default"
            >
              <img
                alt="openwisp"
                class="header-logo-image header-desktop-logo-image"
                src="/assets/default//assets/default/openwisp-logo-black.svg"
              />
            </a>
          </div>
        </div>
        <div
          class="header-right"
          data-testid="desktop-language-selector"
        >
          <button
            class="active header-language-btn header-desktop-language-btn header-language-btn-en"
            type="button"
          >
            english
          </button>
          <button
            class="header-language-btn header-desktop-language-btn header-language-btn-it"
            type="button"
          >
            italian
          </button>
        </div>
      </div>
    </div>
    <div
      class="header-row-2"
    >
      <div
        class="header-row-2-inner"
        data-testid="desktop-navigation"
      />
    </div>
  </div>
  <div
    class="header-mobile "
    data-testid="header"
  >
    <div
      class="header-row-1"
    >
      <div
        class="header-row-1-inner"
      >
        <div
          class="header-left"
        >
          <div
            class="header-logo-div"
          >
            <a
              href="/default"
            >
              <img
                alt="openwisp"
                class="header-logo-image header-mobile-logo-image"
                src="/assets/default//assets/default/openwisp-logo-black.svg"
              />
            </a>
          </div>
        </div>
        <div
          class="header-right"
        >
          <div
            aria-label="Menu Button"
            class="header-hamburger"
            role="button"
            tabindex="0"
          >
            <div
              class=""
            />
            <div
              class=""
            />
            <div
              class=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="display-none header-mobile-menu"
      data-testid="mobile-menu"
    >
      <div
        class="mobile-languages-row"
      >
        <button
          class="active header-language-btn header-mobile-language-btn header-language-btn-en"
          type="button"
        >
          english
        </button>
        <button
          class="header-language-btn header-mobile-language-btn header-language-btn-it"
          type="button"
        >
          italian
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Header /> rendering with placeholder translation tags should render translation placeholder correctly 1`] = `
<div>
  <div
    class="header-container header-desktop"
    data-testid="header"
  >
    <div
      class="header-row-1"
    >
      <div
        class="header-row-1-inner"
      >
        <div
          class="header-left"
        >
          <div
            class="header-logo-div"
          >
            <a
              href="/default"
            >
              <img
                alt="openwisp"
                class="header-logo-image header-desktop-logo-image"
                src="/assets/default//assets/default/openwisp-logo-black.svg"
              />
            </a>
          </div>
        </div>
        <div
          class="header-right"
          data-testid="desktop-language-selector"
        >
          <button
            class="active header-language-btn header-desktop-language-btn header-language-btn-en"
            type="button"
          >
            english
          </button>
          <button
            class="header-language-btn header-desktop-language-btn header-language-btn-it"
            type="button"
          >
            italian
          </button>
        </div>
      </div>
    </div>
    <div
      class="header-row-2"
    >
      <div
        class="header-row-2-inner"
        data-testid="desktop-navigation"
      />
    </div>
  </div>
  <div
    class="header-mobile "
    data-testid="header"
  >
    <div
      class="header-row-1"
    >
      <div
        class="header-row-1-inner"
      >
        <div
          class="header-left"
        >
          <div
            class="header-logo-div"
          >
            <a
              href="/default"
            >
              <img
                alt="openwisp"
                class="header-logo-image header-mobile-logo-image"
                src="/assets/default//assets/default/openwisp-logo-black.svg"
              />
            </a>
          </div>
        </div>
        <div
          class="header-right"
        >
          <div
            aria-label="Menu Button"
            class="header-hamburger"
            role="button"
            tabindex="0"
          >
            <div
              class=""
            />
            <div
              class=""
            />
            <div
              class=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="display-none header-mobile-menu"
      data-testid="mobile-menu"
    >
      <div
        class="mobile-languages-row"
      >
        <button
          class="active header-language-btn header-mobile-language-btn header-language-btn-en"
          type="button"
        >
          english
        </button>
        <button
          class="header-language-btn header-mobile-language-btn header-language-btn-it"
          type="button"
        >
          italian
        </button>
      </div>
    </div>
  </div>
</div>
`;
